# gsutil

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.toml
.github/workflows/: rust-ci.yml
src/: cat.rs  color.rs  cp.rs  lib.rs  ls.rs  main.rs  rm.rs  setmeta.rs  signurl.rs  stat.rs  util.rs
